// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtNoticebar should render close icon and match snapshot 1`] = `
<view
  class="at-noticebar__close"
>
  <text
    class="at-icon at-icon-close"
  />
</view>
`;

exports[`AtNoticebar should render moreText in single-line mode and match snapshot 1`] = `
<view
  class="at-noticebar__more"
>
  <text
    class="text"
  >
    查看更多
  </text>
  <view
    class="at-noticebar__more-icon"
  >
    <text
      class="at-icon at-icon-chevron-right"
    />
  </view>
</view>
`;

exports[`AtNoticebar should render prop icon and match snapshot 1`] = `
<view
  class="at-noticebar__content-icon"
>
  <text
    class="at-icon at-icon-volume-plus"
  />
</view>
`;

exports[`AtNoticebar should render prop speed 1`] = `
<view
  animation="[object Object]"
  class="at-noticebar__content-inner J_kue4"
  id="J_kue4"
  style="animation-duration: 15s;"
>
  this is a slot content
</view>
`;

exports[`AtNoticebar should render slot content and match snapshot 1`] = `
<view
  animation="[object Object]"
  class="at-noticebar__content-inner"
  id="J_fy4i"
>
  this is slot content text
</view>
`;
